--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 dependencies: []
 galaxy_info:
+  role_name: yum_cron
   author: tkimball83
   description: RHEL/CentOS - An interface to conveniently call yum from cron
   license: GPLv3
@@ -11,5 +12,5 @@ galaxy_info:
         - 6
         - 7
   galaxy_tags:
-    - yum-cron
+    - yum
 ...
